--- a/src/assets/styles/cmps/Library.css
+++ b/src/assets/styles/cmps/Library.css
@@ -30,10 +30,11 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 16px;
+    
   }
 
   .library-header h1 {
-    font-size: var(--fs-h2);
+    font-size: var(--fs-body);
     font-weight: 700;
     line-height: var(--lh-tight);
     letter-spacing: var(--ls-tight);
@@ -60,6 +61,7 @@
     display: flex;
     gap: 20px;
     align-items: center;
+    
   }
   .icon-circle {
     width: var(--fs-display);
@@ -258,7 +260,6 @@
   .tooltip {
     position: relative;
     overflow: visible;
-    z-index: 1000;
   }
 
 
@@ -278,6 +279,8 @@
     white-space: nowrap;
     transition: opacity 0.2s ease;
     transition-delay: 0s; 
+    z-index: 1000;
+
   }
 
   .tooltip:hover::after {
